[workspace]
members = [".", "cli"]

[package]
name = "neuron"
version = "0.1.0"
edition = "2021"
publish = ["aciedo"]

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client", "router"]
client = []
router = []

[dependencies]
arrayref = "0.3.7"
async-compression = { version = "0.4.4", features = ["zstd", "tokio"] }
blake3 = "1.5.0"
byteorder = "1.5.0"
chrono = "0.4.31"
futures = "0.3.28"
hashbrown = { version = "0.14.1", features = ["rkyv", "nightly"] }
kt2 = "1.0.0"
petgraph = "0.6.4"
quinn = "0.10.2"
quinn-proto = "0.10.5"
rand = "0.8.5"
rcgen = "0.11.3"
rkyv = { version = "0.7.42", features = ["copy", "validation", "archive_le", "arbitrary_enum_discriminant"] }
rustls = { version = "0.21.7", features = ["quic"] }
rustls-pemfile = "1.0.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
typed-builder = "0.16.2"
unsigned-varint = "0.7.2"
