[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.1", features = ["rkyv", "nightly"] }
kt2 = "1.0.0"
blake3 = "1.5.0"
rkyv = { version = "0.7.42", features = ["copy", "validation", "archive_le"] }
neuron = { path = ".."}
tracing-subscriber = "0.3.17"
tokio = { version = "1.33.0", features = ["full"] }
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
